# talent-plan

rust/projects/project-1/: Cargo.toml
rust/projects/project-1/src/: kv.rs  lib.rs
rust/projects/project-2/: Cargo.toml
rust/projects/project-2/src/: kv.rs  lib.rs
