[package]
name = "kvs"
version = "0.1.0"
authors = ["Evan Harvey <harveyem@utas.edu.au>"]
description = "A key-value store"
edition = "2018"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
bincode = "^1.1.4"
clap = "2"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
